More changes for calendar events

--- a/totalhr.web/Views/Shared/_CalendarEventEdit.cshtml
+++ b/totalhr.web/Views/Shared/_CalendarEventEdit.cshtml
@@ -9,7 +9,7 @@
     ViewBag.Title = "CalendarEventEdit";
 
     var lstDayHours = new List<string> { "00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23" };
-    var lstDayMinutes = new List<string> { "05", "10", "15", "20", "25", "30", "35", "40", "45", "50", "55" };
+    var lstDayMinutes = new List<string> {"00", "05", "10", "15", "20", "25", "30", "35", "40", "45", "50", "55" };
 
     var WeekDaysJS = ViewBag.WeekDaysJS;
     
@@ -271,8 +271,7 @@
                     </div>
 
                     @Html.HiddenFor(x => x.RepeatType)
-                    @Html.HiddenFor(x => x.RepeatXML) 
-                    @Html.HiddenFor(x => x.RepeatValue)  
+                    @Html.HiddenFor(x => x.RepeatXML)  
                     
                     <span id="spmonthlydate"></span>              
                 </div>
