--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 
-    <div id="dvPopup" style="display: none;">        
+    <div id="dvPopup" style="display: none;"> 
+        <iframe id="ipopup"></iframe>       
     </div>
 </body>
 </html>
