--- a/totalhr.web/Content/Site.css
+++ b/totalhr.web/Content/Site.css
@@ -195,8 +195,8 @@ div.line
 
 #dvPopup {
     
-    width: 500px;
-    height: 700px;
+    width: 700px;
+    height: 650px;
     position: absolute;
     top: 200px;
     left: 200px;
@@ -204,4 +204,10 @@ div.line
     background-color: beige;
     color: grey;
     border: 2px solid blue;
+}
+
+#ipopup {
+    width:100%;
+    min-height:100%;
+    border:none;
 }
