--- a/totalhr.web/Content/calendar.css
+++ b/totalhr.web/Content/calendar.css
@@ -88,3 +88,6 @@ table.calendar tr td span.event {
     #dvReminders input[type='text'] {
         height:10px;
     }
+.light {
+    font-weight: normal;
+}
