--- a/totalhr.web/Content/css/popup.css
+++ b/totalhr.web/Content/css/popup.css
@@ -2,6 +2,8 @@
 body {
     background-color: #F9F9F9;
     overflow-x: hidden;
+    margin:0;
+    padding:0;
 }
 
 .req {
@@ -160,3 +162,27 @@ body, html {
 #dvPopupAjax {
     width:400px;height:400px;border:2px solid grey;background-color:beige;position:relative;z-index:10010;left:400px;
 }
+
+div.popuphead {
+    float:left;width:100%;height:50px;margin-top:-15px;background-color:grey;color:white;
+}
+
+
+
+    div.popuphead h2 {
+        float:left;width:400px;margin: 10px 0 0;color:white;
+    }
+
+div#toolbox {
+    float:right;width:200px;height:98%;padding:1%;
+}
+
+    div#toolbox .spsave {
+        background:transparent url('/content/images/save.png') center center no-repeat;float:right;display:block;width:24px;height:24px;
+        cursor:pointer;margin-right:10px;
+        }
+
+    div#toolbox .spclose {
+        background:transparent url('/content/images/close.png') center center no-repeat;float:right;display:block;width:22px;height:22px;
+    cursor:pointer;
+        }
