--- a/totalhr.web/Views/Calendar/EventEdit.cshtml
+++ b/totalhr.web/Views/Calendar/EventEdit.cshtml
@@ -14,18 +14,17 @@
 }
 
 
-<div id="main">
-    <div class="content">
-       <h2>@((Model.EventId > 0)? Common.Page_TT_Calendar_Event_Edit : Common.Page_TT_Calendar_Event_Add)</h2>
-
-        <p>Calendar Name: @Model.CalendarName</p>
+@section head2{
+    <h2>@((Model.EventId > 0)? Common.Page_TT_Calendar_Event_Edit : Common.Page_TT_Calendar_Event_Add)</h2>
+}
+    
+              
+        <p>@Calendar.V_Calendar_Name: @Model.CalendarName</p>
 
         @{
             Html.RenderPartial("_CalendarEventEdit");
         }
-        
-    </div>
-</div>
+    
 
 
 
