More changes for calendar Day and Week View

--- a/totalhr.web/Content/calendar.css
+++ b/totalhr.web/Content/calendar.css
@@ -91,3 +91,8 @@ table.calendar tr td span.event {
 .light {
     font-weight: normal;
 }
+
+.calendar td.today {
+    background-color:beige;
+    color:brown;
+}
