Added notification functionality for Event creation

--- a/totalhr.web/Views/Home/Index.cshtml
+++ b/totalhr.web/Views/Home/Index.cshtml
@@ -19,7 +19,8 @@
 
     <br />
 
-    <a href="/Account/Login">Click here to Login</a><br />
+    <a href="/Account/Login">Click here to Login</a>
+    <br />
     
     <a href="/Account/ExpressLogAdmin">Log Admin</a>
     
