--- a/totalhr.web/Views/Account/Login.cshtml
+++ b/totalhr.web/Views/Account/Login.cshtml
@@ -46,6 +46,9 @@
         <p>
             <a href="/Account/ForgotPassword" >@Common.V_Password_Reminder</a>
         </p>
+        <p>
+            <a href="/Account/Register" >@FormMessages.btn_Register</a>
+        </p>
     </div>
 </div>
 
